# tauri-runtime-verso

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: docs.yaml  test.yaml  test.yml
examples/api/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/api/src/: index.html  main.tsx  style.css  title-bar.tsx
examples/api/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/api/src-tauri/capabilities/: main.json
examples/api/src-tauri/src/: main.rs  tray.rs
examples/api/src/components/: api-forms.css  api-forms.tsx  title-bar.css
examples/helloworld/: .gitignore  Cargo.toml  README.md  index.html  tauri.conf.json
examples/helloworld/capabilities/: main.json
examples/helloworld/src/: main.rs
src/: event_loop_ext.rs  initialization-script.js  invoke-system-initialization-script.js  lib.rs  runtime.rs  utils.rs  webview.rs  window.rs
src/monitor/: linux.rs  macos.rs  mod.rs  windows.rs
tauri-runtime-verso-build/: Cargo.toml  README.md
tauri-runtime-verso-build/src/: lib.rs
