[package]
name = "tauri-runtime-verso"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "tauri-runtime-verso-build",
    # Examples
    "examples/helloworld",
    "examples/api/src-tauri",
]

[workspace.dependencies]
verso = { git = "https://github.com/tauri-apps/verso", rev = "97e9b2f220893407e02c8b54c6d747f8e13939ed" }
versoview_build = { git = "https://github.com/tauri-apps/verso", rev = "97e9b2f220893407e02c8b54c6d747f8e13939ed" }

[features]
# Required if you use tauri's macos-private-api feature
macos-private-api = ["tauri-runtime/macos-private-api"]

[dependencies]
verso = { workspace = true }
tauri = { version = "=2.5.1", default-features = false }
tauri-runtime = "=2.6.0"
tauri-utils = "=2.4.0"
tao = "0.33"
raw-window-handle = "0.6"
url = "2"
http = "1"
percent-encoding = "2"
log = "0.4"

[target."cfg(windows)".dependencies]
windows = "0.61"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[patch."https://github.com/tauri-apps/verso"]
# verso = { path = "../verso/verso" }
# versoview_build = { path = "../verso/versoview_build" }

[lints.clippy]
needless_doctest_main = "allow"
