[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
    # Default features
    # "wry",
    # "compression",
    "common-controls-v6",
    # Additional features
    # "devtools",
] }
tauri-runtime-verso = { path = "../../" }
# serde = "1"
