[package]
name = "api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
    # Default features
    # "wry",
    # "compression",
    "common-controls-v6",
    # Additional features
    # "devtools",
] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-runtime-verso = { path = "../../../" }
