[package]
name = "api"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-runtime-verso-build = { path = "../../../tauri-runtime-verso-build" }
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
    # Default features
    # "wry",
    # "compression",
    "common-controls-v6",
    # "x11",
    # "dynamic-acl",
    # Additional features
    "tray-icon",
] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-runtime-verso = { path = "../../../" }
